SERVER-33351 perserve stack in BackgroundJob exceptions